
	For the first time since version 2.4.0, the database format has
	changed slightly, so you will need to run 'mandb --create' after
	installing the new version to rebuild your databases from scratch.
	(Distribution packages should do this automatically for system
	databases.)

	Fixes:
	------

	o lexgrog now filters terminal escape sequences out of cat pages
	  before trying to parse them.

	Improvements:
	-------------

	o Ship a systemd tmpfiles snippet to clean up old cat files after a
	  week.

	o The modification time of manual databases is now simply stored in
	  the mtime of the database files themselves, rather than using a
	  special row.  This makes databases reproducible between
	  otherwise-identical installations, as long as the underlying
	  database has predictable behaviour.  As a bonus, man-db now uses
	  high-precision timestamps to determine whether it needs to update
	  databases.

	o Timestamps of manual pages are also now stored in the database
	  with high precision and compared accordingly.

	o Files are now ordered by first physical extent before reading
	  them, for substantial performance improvements in operations such
	  as mandb and 'man -K'.

man-db 2.6.7.1 (10 April 2014)
==============================

Major changes since man-db 2.6.7:

	Fixes:
	------

	o Remove test suite dependency on realpath(1).

man-db 2.6.7 (10 April 2014)
============================

Major changes since man-db 2.6.6:

	Fixes:
	------

	o Fix a test failure when configured with --enable-undoc.

	o Run the pager in man's original working directory rather than in
	  the manual hierarchy.  (As a result of this fix, man-db now
	  requires libpipeline >= 1.3.0.)

	o mandb only creates a cache directory tag if the catpath is
	  different from the manpath, since it should only be created in
	  directories that consist entirely of cached information.

man-db 2.6.6 (23 January 2014)
==============================

Major changes since man-db 2.6.5:
