@@ -228,11 +228,11 @@ If
 is set, its value is used as the terminal width (see the
 .B \-\-long
 option).
-If it is not set, the terminal width will be calculated using an
-.BR ioctl (2)
-if available, the value of
+If it is not set, the terminal width will be calculated using the value of
 .RB $ COLUMNS ,
-or falling back to 80 characters if all else fails.
+an
+.BR ioctl (2)
+if available, or falling back to 80 characters if all else fails.
 .SH FILES
 .TP
 .if !'po4a'hide' .I /usr/share/man/index.(bt|db|dir|pag)
