@@ -18,6 +18,9 @@ Major changes since man-db 2.6.7.1:
 	o lexgrog now filters terminal escape sequences out of cat pages
 	  before trying to parse them.
 
+	o Tools that consider the terminal line length now prioritise the
+	  COLUMNS environment variable above the TIOCGWINSZ ioctl.
+
 	Improvements:
 	-------------
 
